# PoolsideGUI

./: .gitignore  CMakeLists.txt  images.qrc  launch_config.sh  launch_config_kx.sh  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Communication/: UdpClient.cpp  UdpClient.h
Control/: ControlBase.cpp  ControlBase.h  Gamepad.cpp  Gamepad.h
KX_Pult/: configdata.cpp  kx_protocol.cpp  protocols.conf  qkx_coeffs.h  qpiconfig.h
StabilizationSettings/: StabilizationWindow.cpp  StabilizationWindow.h  StabilizationWindow.ui
ThrusterSettings/: Thruster.cpp  Thruster.h  Thruster.ui  ThrusterWindow.cpp  ThrusterWindow.h
UV/: i_basicData.cpp  i_controlData.cpp  i_controlData.h  i_serverData.cpp  i_serverData.h  i_tuningData.cpp  i_tuningData.h  i_userInterfaceData.cpp  i_userInterfaceData.h  iserverdata.h  uv_controlCircuit.cpp  uv_controlCircuit.h  uv_device.cpp  uv_device.h  uv_state.cpp  uv_state.h  uv_thruster.cpp  uv_thruster.h
